Added patch update feature